# alterlinux-i3-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  alterlinux-i3-manager.cbp  alterlinux-i3-manager.desktop  alterlinux-i3-manager.pro  alterlinux-i3-manager_ja_JP.qm  alterlinux-i3-manager_ja_JP.ts  alterlinux-i3-theme-settingmanager.pro  alterlinux-i3-theme-settingmanager_ja_JP.ts  alterlinux-polybar-theme-settingmanager.pro  alterlinux-polybar-theme-settingmanager_ja_JP.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
docs/: CMakeLists.txt  doxygen.conf.in
inc/: edit_file_specific_line.h  looks_page.h  mainwindow.h  modules_page.h  setting_list.h
lang/: alterlinux-i3-manager_ja.qm  alterlinux-i3-manager_ja.ts
polybar/: config.ini  modules.ini
src/: edit_file_specific_line.cpp  looks_page.cpp  main.cpp  mainwindow.cpp  mainwindow_looks_setting.cpp  mainwindow_modules_setting.cpp  modules_page.cpp
